--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,22 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 body {
-    /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
 }
 /* apply styles to <header> */
 header {
     padding: 20px 35px;
-    background-color: #39a6b2
+    background-color: #39a6b2;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
-    display: inline
+    display: inline;
 }
 
 header a {
