--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,8 @@ section {
   background-color: #fce138;
   padding: 20px;
   color: #024e76;
+  width: 40%;
+  margin: 3.5%;
 }
 
 .hero-form h3 {
@@ -108,6 +110,21 @@ section {
 }
 .hero-form p {
   margin: 5px 0 15px 0;
+}
+
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
+
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
 }
 
 .form-input {
@@ -137,11 +154,12 @@ section {
 /* SECTION TITLE STYLES START */
 .section-title {
   font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
-  margin-bottom: 35px;
   color: #024e76;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -154,9 +172,6 @@ section {
 /* SECTION TITLE STYLES END */
 
 /* WHAT WE DO STYLES */
-.intro {
-  text-align: center;
-}
 
 .intro p {
   line-height: 1.7;
@@ -164,13 +179,13 @@ section {
   width: 80%;
   margin: 0 auto;
   font-size: 20px;
+  text-align: center;
 }
 /* WHAT YOU DO STYLES END */
 
 
 /* WHAT YOU DO STYLES START */
 .steps { 
-  text-align: center;
   background: #fce138;
 }
 
@@ -201,7 +216,6 @@ section {
 
 /* MEET THE TRAINERS START */
 .trainers {
-  text-align: center;
 }
 
 .trainer {
@@ -242,7 +256,6 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
@@ -290,4 +303,8 @@ height: 400px;
 
 .text-right {
   text-align: right;
+}
+
+.flex-row {
+  display: flex;
 }
