--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ header {
   top: 0;
   background-image: url("../images/hero-bg.jpg");
   background-size: cover;
-  background-position: center;
   background-attachment: fixed;
   background-position: 80%;
 }
@@ -110,11 +109,7 @@ section {
   flex-wrap: wrap;
   background-image: url('../images/hero-bg.jpg');
   background-size: cover;
-  background-position: center;
   align-items: flex-start;
-  background-image: url("../images/hero-bg.jpg");
-  background-size: cover;
-  background-position: center;
   background-attachment: fixed;
   background-position: 80%;
 }
@@ -122,7 +117,6 @@ section {
 .hero-form {
   border: 3px solid #024e76;
   background-color: rgb(252, 225, 56);
-  opacity: 80%; 
   padding: 20px;
   color: #024e76;
   width: 40%;
@@ -146,13 +140,14 @@ section {
   color: #fff;
   font-size: 18px;
   line-height: 1.2;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  
 }
 
 .hero-cta h2 {
   font-style: italic;
   font-size: 55px;
   color: #fce138;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .form-input {
@@ -304,6 +299,7 @@ section {
 
 .trainer-bio {
   padding: 25px;
+  line-height: 1.3;
 }
 
 .trainer-bio h3 {
@@ -366,7 +362,7 @@ height: 400px;
   margin-bottom: 15px;
   margin-top: 5px;
   border radius: 10px;
-  opacity: 80%;
+  background-color: rgba(255,255,255, 0.75);
 }
 
 .contact-form input:focus, .contact-form textarea:focus {
