--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ header {
   background-size: cover;
   background-attachment: fixed;
   background-position: 80%;
+  z-index: 9999;
 }
 
 header h1 {
@@ -72,7 +73,7 @@ header nav ul li a:hover {
   border-radius: 15px;
   text-shadow: none;
 }
-z-index: 9999;
+
 
 /* HEADER / NAVBAR STYLES END */
 
@@ -404,6 +405,11 @@ height: 400px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+}
+
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
 }
 
 .contact-info h3 {
